--- a/dcrm/website/templates/home.html
+++ b/dcrm/website/templates/home.html
@@ -1,35 +1,30 @@
 {% extends "base.html" %} {% block content %}
 
 <div class="mt-3">
-  
+  <div class="d-flex justify-content-between">
+    <h2>Customers</h2>
+    <a href="{% url "add_record" %}"><button class="btn btn-dark btn-sm">Add Customer</button></a>
+  </div>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">First Name</th>
+        <th scope="col">Last Name</th>
+        <th scope="col">Phone Number</th>
+      </tr>
+    </thead>
+    <tbody>
       {% for customer in customers %}
-      {{customer}}
+      <tr>
+        <th scope="row">{{ forloop.counter }}</th>
+        <td>{{ customer.first_name }}</td>
+        <td>{{ customer.last_name }}</td>
+        <td>{{ customer.phone }}</td>
+      </tr>
       {% endfor %}
-
-      {% if not user.is_authenticated %}
-  <h1 class="mt-3">Login</h1>
-  <form method="POST" action={% url "home" %}>
-    {% csrf_token %}
-
-    <div>
-        <div class="mb-3">
-            <label for="username" class="form-label">Username</label>
-            <input
-            name= 'username'
-              type="text"
-              class="form-control"
-              id="username"
-              aria-describedby="emailHelp"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="password" class="form-label">Password</label>
-            <input name= 'password' type="password" class="form-control" id="password" />
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-    </div>
-  </form>
-  {% endif %}
+    </tbody>
+  </table>
 </div>
 
 {% endblock content %}
