--- a/dcrm/website/templates/login.html
+++ b/dcrm/website/templates/login.html
@@ -3,7 +3,7 @@
 <div class="mt-3">
       {% if not user.is_authenticated %}
   <h1 class="mt-3">Login</h1>
-  <form method="POST" action={% url "home" %}>
+  <form method="POST" action={% url "login" %}>
     {% csrf_token %}
 
     <div>
