--- a/dcrm/website/templates/navbar.html
+++ b/dcrm/website/templates/navbar.html
@@ -12,20 +12,26 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
+    
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         {% if user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href={% url "register" %}>Add User</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href={% url "logout" %}>Logout</a>
         </li>
         {% else %}
         <li class="nav-item">
-          <a class="nav-link" href={% url "home" %}>Login</a>
+          <a class="nav-link" href={% url "login" %}>Login</a>
         </li>
-      
-
         {% endif %}
       </ul>
     </div>
+    {% if user.is_authenticated %}
+      <p class="navbar-brand my-auto">Hey, {{user}}!</p>
+    {% endif %}
+
   </div>
 </nav>
