--- a/dcrm/website/templates/add_record.html
+++ b/dcrm/website/templates/add_record.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block content %}
-<h1>Add Record</h1>
+<h1>Add Customer</h1>
 <form action="{% url "add_record" %}" method="post">
     {% csrf_token %}
 
